Version 5.4.2 (TBD)
    Fixed a regression where the `anchor_top` and `anchor_bottom` settings weren't working when set to `false` #TINY-6256
Version 5.4.1 (2020-07-08)
    Fixed the Search and Replace plugin incorrectly including zero-width caret characters in search results #TINY-4599
    Fixed dragging and dropping unsupported files navigating the browser away from the editor #TINY-6027
    Fixed undo levels not created on browser handled drop or paste events #TINY-6027
    Fixed content in an iframe element parsing as DOM elements instead of text content #TINY-5943
    Fixed Oxide checklist styles not showing when printing #TINY-5139
    Fixed bug with `scope` attribute not being added to the cells of header rows #TINY-6206
Version 5.4.0 (2020-06-30)
    Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
    Added the ability for menus to be clicked when the editor is in an open shadow root #TINY-6091
    Added the `Editor.ui.styleSheetLoader` API for loading stylesheets within the Document or ShadowRoot containing the editor UI #TINY-6089
    Added the `StyleSheetLoader` module to the public API #TINY-6100
    Added Oxide variables for styling the `select` element and headings in dialog content #TINY-6070
    Added icons for `table` column and row cut, copy, and paste toolbar buttons #TINY-6062
    Added all `table` menu items to the UI registry, so they can be used by name in other menus #TINY-4866
    Added new `mceTableApplyCellStyle` command to the `table` plugin #TINY-6004
    Added new `table` cut, copy, and paste column editor commands and menu items #TINY-6006
    Added font related Oxide variables for secondary buttons, allowing for custom styling #TINY-6061
    Added new `table_header_type` setting to control how table header rows are structured #TINY-6007
    Added new `table_sizing_mode` setting to replace the `table_responsive_width` setting, which has now been deprecated #TINY-6051